Site nu echt af

--- a/html-css-master/shop.html
+++ b/html-css-master/shop.html
@@ -41,22 +41,22 @@
 
             <div class="shopartikel">
                 <h3 class="koppenartikelen">Ronaldo thuisshirt Juventus: €39.99</h3>
-                <img class="plaatjesshoplinks" src="afbeeldingen/ronaldoshirtjuventus-w250.jpg"><p class="shopkopen">Kopen</p></img>
+                <img class="plaatjesshoplinks" src="afbeeldingen/ronaldoshirtjuventus-w250.jpg"><p class="shopkopen"><a href="https://www.soccerfanshop.nl/product-categorie/voetbal/clubs-landen/shop-per-speler/cristiano-ronaldo/">Kopen</a></p></img>
             </div>
 
             <div class="shopartikel">
                 <h3 class="koppenartikelen">Ronaldo thuisshirt Portugal: €49.99</h3>
-                <img class="plaatjesshoplinks" src="afbeeldingen/ronaldoshirtportugal-w250.jpg"><p class="shopkopen">Kopen</p></img>
+                <img class="plaatjesshoplinks" src="afbeeldingen/ronaldoshirtportugal-w250.jpg"><p class="shopkopen"><a href="https://www.soccerfanshop.nl/product-categorie/voetbal/clubs-landen/shop-per-speler/cristiano-ronaldo/">Kopen</a></p></img>
             </div>
 
             <div class="shopartikel">
                 <h3 class="koppenartikelen">Ronaldo uitshirt Real Madrid 1: €39.99</h3>
-                <img class="plaatjesshoplinks" src="afbeeldingen/ronaldoshirtrealmadrid1-w250.jpg"><p class="shopkopen">Kopen</p></img>
+                <img class="plaatjesshoplinks" src="afbeeldingen/ronaldoshirtrealmadrid1-w250.jpg"><p class="shopkopen"><a href="https://www.soccerfanshop.nl/product-categorie/voetbal/clubs-landen/shop-per-speler/cristiano-ronaldo/">Kopen</a></p></img>
             </div>
 
             <div class="shopartikel">    
                 <h3 class="koppenartikelen">Ronaldo uitshirt Real Madrid 2: €39.99</h3>
-                <img class="plaatjesshoplinks" src="afbeeldingen/ronaldoshirtrealmadrid2-w250.jpg"><p class="shopkopen">Kopen</p></img>
+                <img class="plaatjesshoplinks" src="afbeeldingen/ronaldoshirtrealmadrid2-w250.jpg"><p class="shopkopen"><a href="https://www.soccerfanshop.nl/product-categorie/voetbal/clubs-landen/shop-per-speler/cristiano-ronaldo/">Kopen</a></p></img>
             </div>
 
             <a name="broeken"></a>
@@ -65,22 +65,22 @@
 
             <div class="shopartikel">
                 <h3 class="koppenartikelen">Ronaldo broek zwart Real Madrid / Adidas: €49.99</h3>
-                <img class="plaatjesshoplinks" src="afbeeldingen/ronaldobroekreal1.jpg"><p class="shopkopen">Kopen</p></img>
+                <img class="plaatjesshoplinks" src="afbeeldingen/ronaldobroekreal1.jpg"><p class="shopkopen"><a href="https://www.soccerfanshop.nl/product-categorie/voetbal/clubs-landen/shop-per-speler/cristiano-ronaldo/">Kopen</a></p></img>
             </div>
 
             <div class="shopartikel">    
             <h3 class="koppenartikelen">Ronaldo broek blauw Real Madrid: €59.99</h3>
-            <img class="plaatjesshoplinks" src="afbeeldingen/ronaldobroekreal2.jpg"><p class="shopkopen">Kopen</p></img>       
+            <img class="plaatjesshoplinks" src="afbeeldingen/ronaldobroekreal2.jpg"><p class="shopkopen"><a href="https://www.soccerfanshop.nl/product-categorie/voetbal/clubs-landen/shop-per-speler/cristiano-ronaldo/">Kopen</a></p></img>       
             </div>
 
             <div class="shopartikel">
                 <h3 class="koppenartikelen">Ronaldo broek blauw Nike (CR7 Logo): €59.99</h3>
-                <img class="plaatjesshoplinks" src="afbeeldingen/ronaldobroekreal3.jpg"><p class="shopkopen">Kopen</p></img>
+                <img class="plaatjesshoplinks" src="afbeeldingen/ronaldobroekreal3.jpg"><p class="shopkopen"><a href="https://www.soccerfanshop.nl/product-categorie/voetbal/clubs-landen/shop-per-speler/cristiano-ronaldo/">Kopen</a></p></img>
             </div>
 
             <div class="shopartikel">
                 <h3 class="koppenartikelen">Ronaldo broekje wit Real Madrid: €24.99</h3>
-                <img class="plaatjesshoplinks" src="afbeeldingen/ronaldobroekreal4.jpg"><p class="shopkopen">Kopen</p></img>
+                <img class="plaatjesshoplinks" src="afbeeldingen/ronaldobroekreal4.jpg"><p class="shopkopen"><a href="https://www.soccerfanshop.nl/product-categorie/voetbal/clubs-landen/shop-per-speler/cristiano-ronaldo/">Kopen</a></p></img>
             </div>
 
             <a name="schoenen"></a>
@@ -89,22 +89,22 @@
 
             <div class="shopartikel">
                 <h3 class="koppenartikelen">Ronaldo voetbalschoenen rood Nike: €119.99 </h3>
-                <img class="plaatjesshoplinks" src="afbeeldingen/ronaldoschoen1.jpg"><p class="shopkopen">Kopen</p></img>
+                <img class="plaatjesshoplinks" src="afbeeldingen/ronaldoschoen1.jpg"><p class="shopkopen"><a href="https://www.soccerfanshop.nl/product-categorie/voetbal/clubs-landen/shop-per-speler/cristiano-ronaldo/">Kopen</a></p></img>
             </div>
 
             <div class="shopartikel">
                 <h3 class="koppenartikelen">Ronaldo voetbalschoenen blauw Nike: €119.99</h3>
-                <img class="plaatjesshoplinks" src="afbeeldingen/ronaldoschoen2.jpg"><p class="shopkopen">Kopen</p></img>
+                <img class="plaatjesshoplinks" src="afbeeldingen/ronaldoschoen2.jpg"><p class="shopkopen"><a href="https://www.soccerfanshop.nl/product-categorie/voetbal/clubs-landen/shop-per-speler/cristiano-ronaldo/">Kopen</a></p></img>
             </div>
 
             <div class="shopartikel">
                 <h3 class="koppenartikelen">Ronaldo voetbalschoenen rood / zwart Nike: €129.99</h3>
-                <img class="plaatjesshoplinks" src="afbeeldingen/ronaldoschoen3.jpg"><p class="shopkopen">Kopen</p></img>
+                <img class="plaatjesshoplinks" src="afbeeldingen/ronaldoschoen3.jpg"><p class="shopkopen"><a href="https://www.soccerfanshop.nl/product-categorie/voetbal/clubs-landen/shop-per-speler/cristiano-ronaldo/">Kopen</a></p></img>
             </div>
 
             <div class="shopartikel">
                 <h3 class="koppenartikelen">Ronaldo voetbalschoenen zwart Nike: €119.99</h3>
-                <img class="plaatjesshoplinks" src="afbeeldingen/ronaldoschoen4.jpg"><p class="shopkopen">Kopen</p></img>
+                <img class="plaatjesshoplinks" src="afbeeldingen/ronaldoschoen4.jpg"><p class="shopkopen"><a href="https://www.soccerfanshop.nl/product-categorie/voetbal/clubs-landen/shop-per-speler/cristiano-ronaldo/">Kopen</a></p></img>
             </div>
 
             <a name="accessoires"></a>
@@ -113,22 +113,22 @@
 
             <div class="shopartikel">
                 <h3 class="koppenartikelen">Ronaldo scheenbeschemers zwart/rood: €29.99</h3>
-                <img class="plaatjesshoplinks" src="afbeeldingen/ronaldoacc1.jpg"><p class="shopkopen">Kopen</p></img>
+                <img class="plaatjesshoplinks" src="afbeeldingen/ronaldoacc1.jpg"><p class="shopkopen"><a href="https://www.soccerfanshop.nl/product-categorie/voetbal/clubs-landen/shop-per-speler/cristiano-ronaldo/">Kopen</a></p></img>
             </div>
 
             <div class="shopartikel">
                 <h3 class="koppenartikelen">Ronaldo Real Madrid mok : €19.99</h3>
-                <img class="plaatjesshoplinks" src="afbeeldingen/ronaldoacc2.jpg"><p class="shopkopen">Kopen</p></img>
+                <img class="plaatjesshoplinks" src="afbeeldingen/ronaldoacc2.jpg"><p class="shopkopen"><a href="https://www.soccerfanshop.nl/product-categorie/voetbal/clubs-landen/shop-per-speler/cristiano-ronaldo/">Kopen</a></p></img>
             </div>
 
             <div class="shopartikel">
                 <h3 class="koppenartikelen">Ronaldo CR7 dekbed: €49.99</h3>
-                <img class="plaatjesshoplinks" src="afbeeldingen/ronaldoacc3.jpg"><p class="shopkopen">Kopen</p></img>
+                <img class="plaatjesshoplinks" src="afbeeldingen/ronaldoacc3.jpg"><p class="shopkopen"><a href="https://www.soccerfanshop.nl/product-categorie/voetbal/clubs-landen/shop-per-speler/cristiano-ronaldo/">Kopen</a></p></img>
             </div>
 
             <div class="shopartikel">
                 <h3 class="koppenartikelen">Ronaldo poster blauw: €19.99</h3>
-                <img class="plaatjesshoplinks" src="afbeeldingen/ronaldoacc4.jpg"><p class="shopkopen">Kopen</p></img>
+                <img class="plaatjesshoplinks" src="afbeeldingen/ronaldoacc4.jpg"><p class="shopkopen"><a href="https://www.soccerfanshop.nl/product-categorie/voetbal/clubs-landen/shop-per-speler/cristiano-ronaldo/">Kopen</a></p></img>
             </div>
             <br>
 
